[package]
name = "genetic-drawer"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.29.2"
image = "0.25.5"
imageproc = "0.25.0"
log = "0.4.22"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
simple_logger = "5.0.0"
